# mango

./: .cproject  .gitignore  .project  AUTHORS  CMakeLists.txt  Gemfile  History.md  README.md  README.mk  build.sh
examples/: CMakeLists.txt
examples/calc/: CMakeLists.txt
examples/calc/features/: addition.feature
examples/calc/features/step_definitions/: CalculatorSteps.cpp
examples/calc/src/: Calculator.cpp  Calculator.h
examples/tags/: CMakeLists.txt
examples/tags/features/step_definitions/: TagSteps.cpp
examples/tags/src/: main.cpp
include/infra/dci/: InterfaceDef.h  Keywords.h  Role.h  Unknown.h
include/infra/dci/interp/: DeclRoleInterp.h  HasRoleInterp.h  ImplRoleInterp.h
include/infra/std/: algorithm.h  source_file.h  string.h
include/mango/: mango.hpp
include/mango/core/base/: mango.h
include/mango/core/except/: PendingStepException.h
include/mango/core/model/: InvokeArgs.h  Scenario.h  Table.h  Tags.h
include/mango/core/regex/: Regex.h  RegexMatch.h  RegexSubMatch.h
include/mango/core/runtime/: Runner.h  Runtime.h
include/mango/core/tag/: AndTagExpr.h  OrTagExpr.h  TagExpr.h
include/mango/dsl/hook/: After.h  AfterAll.h  AfterStep.h  AroundStep.h  Before.h  BeforeAll.h  HookDefs.h  HookRegistration.h
include/mango/dsl/step/: StepDefs.h  StepRegistration.h
include/mango/infra/base/: Singleton.h
include/mango/infra/dci/: InterfaceDef.h  Keywords.h  Role.h  Unknown.h
include/mango/infra/std/: algorithm.h  fwd_decl.h  string.h
src/: CMakeLists.txt
src/infra/std/: source_file.cpp  string.cpp
src/mango/core/except/: PendingStepException.cpp
src/mango/core/model/: InvokeArgs.cpp  Scenario.cpp  Table.cpp  Tags.cpp
src/mango/core/regex/: Regex.cpp  RegexSubMatch.cpp
src/mango/core/runtime/: Runner.cpp  Runtime.cpp
src/mango/core/tag/: AndTagExpr.cpp  OrTagExpr.cpp
test/: CMakeLists.txt
test/hooks/: CMakeLists.txt  HookTest.cpp
test/std/: AlgorithmTest.cpp  CMakeLists.txt
test/tags/: AndTagExprTest.cpp  CMakeLists.txt  OrTagExprTest.cpp  TagExprFixture.h
(+77 files in other folders)
